--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,12 @@
     rel="stylesheet">
   <link rel="stylesheet" href="./assets/css/reset.css">
   <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="./assets/css/interaction.css">
 </head>
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div class="root">
+  <div id="root">
   </div>
 
   <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
